objects/UIP_Annual_CDE_Plan__c.object
<CustomObject><fields>
        <fullName>AEC_SPF_Date__c</fullName>
        <label>AEC SPF Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>AEC_SPF_Help_Text__c</fullName>
        <label>AEC SPF Help Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Academic_Achievement_Measures_Metrics__c</fullName>
        <label>Academic Achievement Measures / Metrics</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Academic_Growth_Gaps_Median_Growth_Perc__c</fullName>
        <label>Academic Growth Gaps Median Growth %</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Academic_Growth_Median_Growth_Perc__c</fullName>
        <label>Academic Growth Median Growth %</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Academic_Year__c</fullName>
        <label>Academic Year</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>April_Deadline__c</fullName>
        <label>Final Submission</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Average_Daily_Attendance__c</fullName>
        <label>Average Daily Attendance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Blank_Template_Released__c</fullName>
        <label>Blank Template Released</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Blank_Template_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when this year's template is ready for publication to the Community Portal.</inlineHelpText>
        <label>Blank Template Ready for publish?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CGP_ID_Process__c</fullName>
        <description>Colorado Graduation Pathways Program (CGP) Identification Process</description>
        <label>CGP ID Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Disaggregated_Grad_Rate_Expectation__c</fullName>
        <label>Disaggregated Grad Rate Expectation</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Dropout_Rate_Expectation__c</fullName>
        <label>Dropout Rate Expectation</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Final_Submission_Help_Text__c</fullName>
        <label>Final Submission Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Graduation_Rate_Expectation__c</fullName>
        <label>Graduation Rate Expectation</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>January_Deadline__c</fullName>
        <label>Required Review Submission</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Mean_CO_ACT_Composite_Score_Expecation__c</fullName>
        <label>Mean CO ACT Composite Score Expecation</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Next_School_Year__c</fullName>
        <inlineHelpText>Please add the values for next school year (eg 2015-2016)</inlineHelpText>
        <label>Next School Year</label>
        <length>9</length>
        <type>Text</type>
    </fields><fields>
        <fullName>October_Deadline__c</fullName>
        <label>Optional Review Submission</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Optional_Review_Help_Text_TIG__c</fullName>
        <label>Optional Review Help Text for TIG, PI, T</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Plan_Type_Assignment_ID_Process__c</fullName>
        <label>Plan Type Assignment ID Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Prior_School_Year__c</fullName>
        <description>Please add the values for the prior school year (e.g. 2015-2016).</description>
        <inlineHelpText>Please add the values for the prior school year (e.g. 2015-2016).</inlineHelpText>
        <label>Prior School Year</label>
        <length>9</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Re_Review_Help_Text__c</fullName>
        <label>Re-Review Help Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Re_review_Submission__c</fullName>
        <label>Re-review Submission</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Required_Review_Help_Text__c</fullName>
        <label>Jan Review Help Text for Required Review</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>School_s_on_Accountability_Clock__c</fullName>
        <label>School(s) on Accountability Clock</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Section_1_Data_Populated__c</fullName>
        <label>Section I Data Populated</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Section_1_Data_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when the Section I data has been populated and is ready for District and School review.</inlineHelpText>
        <label>Section I Data Populated?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_1_Update_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when the Section I data has been updated.</inlineHelpText>
        <label>Section I Data Updated?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_1_Update__c</fullName>
        <label>Section I Update</label>
        <type>Date</type>
    </fields><fields>
        <fullName>TIG_ID_Process__c</fullName>
        <description>Tiered Intervention Grant Identification process</description>
        <label>TIG ID Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>This_School_Year__c</fullName>
        <inlineHelpText>Please put in the dates for this school year (eg 2014-2015)</inlineHelpText>
        <label>This School Year</label>
        <length>9</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Title_I_Focus_School_ID_Process__c</fullName>
        <label>Title I Focus School ID Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Truancy_Rate__c</fullName>
        <label>Truancy Rate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>UIP_Start_Date__c</fullName>
        <description>Date of start of timeline.</description>
        <inlineHelpText>Date of start of timeline.</inlineHelpText>
        <label>UIP Start Date</label>
        <type>Date</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>UIP Annual CDE Plan</label><nameField>
        <label>UIP Annual CDE Plan Name</label>
        <type>Text</type>
    </nameField><pluralLabel>UIP Annual CDE Plans</pluralLabel><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>